--- a/templates/index.html
+++ b/templates/index.html
@@ -56,7 +56,7 @@
 </style>
 <body>
     <div class="header">
-        <h1>Weather API</h1>
+        <h1>Weather API SHIT</h1>
     </div>
     <div class="image-container">
         <img src="https://www.itechyoutube.com/wp-content/uploads/2019/07/cloud-346710_1280.png" alt="">
